--- a/index.html
+++ b/index.html
@@ -63,17 +63,17 @@
         <ul class="list-content">
           <li class="list-item">
             <span class="elipsis">
-              <a href="#" class="link">Lo mejor de lo mejor</a>
+              <a href="./playlist1.html" class="link">Lo mejor de lo mejor</a>
             </span>
           </li>
           <li class="list-item">
             <span class="elipsis">
-              <a href="#" class="link">Naruto al 100% para programar</a>
+              <a href="./playlist3.html" class="link">Mansión Reggaeton</a>
             </span>
           </li>
           <li class="list-item">
             <span class="elipsis">
-              <a href="#" class="link">Para cantar en la ducha</a>
+              <a href="./playlist2.html" class="link">Para cantar en la ducha</a>
             </span>
           </li>
           <li class="list-item">
@@ -309,7 +309,7 @@
           <section class="playlistList" aria-labelledby="region2">
             <div class="playlistList-top">
               <h2 class="playlistList-title" id="region2">
-                Escuchado recientemente
+                <a href="./playlist1.html" class="link" style="color: var(--white);"> Escuchado recientemente </a>
               </h2>
               <div class="navigation">
                 <button class="navigation-prev" disabled aria-label="Volver" title="Volver">
