--- a/playlist1.html
+++ b/playlist1.html
@@ -32,7 +32,7 @@
         <nav class="menu" aria-label="Principal">
           <ul class="menu-list">
             <li class="menuItem is-active">
-              <a href="/" class="link" aria-current="page">
+              <a href="./index.html" class="link" aria-current="page">
                 <i class="icon-home" aria-hidden="true"></i>
                 <span>Inicio</span>
               </a>
@@ -81,7 +81,7 @@
             </li>
             <li class="list-item">
               <span class="elipsis">
-                <a href="#" class="link">Para cantar en la ducha</a>
+                <a href="./playlist2.html" class="link">Para cantar en la ducha</a>
               </span>
             </li>
             <li class="list-item">
