--- a/playlist1.html
+++ b/playlist1.html
@@ -163,6 +163,14 @@
               <i class="icon-search" aria-hidden="true"></i>
               <input id="search" type="search" placeholder="Buscar por Artistas, canciones o podcast">
             </form>
+            <div class="navProfile">
+              <button class="profile" aria-label="Menu del perfil" title="Menu del perfil">
+                <img loading="lazy" class="profile-image" src="./images/pfp.jpeg" width="28" height="28"
+                  alt="Fotografia del usuario">
+                <p class="profile-name" aria-label="Nombre del usuario">Juan Pablo</p>
+                <i class="icon-vector" aria-hidden="true"></i>
+              </button>
+            </div>
           </header>
         </div>
       </div>
