--- a/playlist2.html
+++ b/playlist2.html
@@ -152,6 +152,14 @@
                   <i class="icon-search" aria-hidden="true"></i>
                   <input id="search" type="search" placeholder="Buscar por Artistas, canciones o podcast">
                 </form>
+                <div class="navProfile">
+                  <button class="profile" aria-label="Menu del perfil" title="Menu del perfil">
+                    <img loading="lazy" class="profile-image" src="./images/pfp.jpeg" width="28" height="28"
+                      alt="Fotografia del usuario">
+                    <p class="profile-name" aria-label="Nombre del usuario">Juan Pablo</p>
+                    <i class="icon-vector" aria-hidden="true"></i>
+                  </button>
+                </div>
               </header>
             </div>
           </div>
@@ -182,20 +190,62 @@
                 <h3 class="headerDetails-calendar is-page4">Agregado el</h3>
                 <i class="icon-clock headerDetails-clock"></i>
               </div>
-             <div class="songContainer">
-              <div class="verticalPlaylist">
-                <div class="collage">
-                  <img src="./images/anime-hits.png" width="40" height="40" alt="Fotografía de la canción">
-                  <div class="collage-description">
-                    <p class="verticalPlaylist-title u-noMargin" aria-label="Nombre de la canción">Grand Escape</p>
-                    <a class="verticalpage2rtist link" aria-label="Nombre del grupo o artista" href="#">RADWIMPS</a>
+                <div class="songContainer">
+                  <div class="verticalPlaylist">
+                    <div class="collage">
+                      <img src="./images/anime-hits.png" width="40" height="40" alt="Fotografía de la canción">
+                      <div class="collage-description">
+                        <p class="verticalPlaylist-title u-noMargin" aria-label="Nombre de la canción">Grand Escape</p>
+                        <a class="verticalpage2rtist link" aria-label="Nombre del grupo o artista" href="#">RADWIMPS</a>
+                      </div>
+                    </div>
+                    <a class="verticalpage2lbum link is-page4" aria-label="Nombre del álbum" href="#">Gurenge</a>
+                    <p class="verticalPlaylist-date is-page4" aria-label="Fecha en la cual se subió la canción">05 de sep. de 2021</p>
+                    <p class="verticalPlaylist-time is-page4" aria-label="Duración de la canción">3:58</p>
                   </div>
                 </div>
-                <a class="verticalpage2lbum link is-page4" aria-label="Nombre del álbum" href="#">Gurenge</a>
-                <p class="verticalPlaylist-date is-page4" aria-label="Fecha en la cual se subió la canción">05 de sep. de 2021</p>
-                <p class="verticalPlaylist-time is-page4" aria-label="Duración de la canción">3:58</p>
-              </div>
-            </div>
+                <div class="songContainer">
+                  <div class="verticalPlaylist">
+                    <div class="collage">
+                      <img src="./images/anime-hits.png" width="40" height="40" alt="Fotografía de la canción">
+                      <div class="collage-description">
+                        <p class="verticalPlaylist-title u-noMargin" aria-label="Nombre de la canción">Grand Escape</p>
+                        <a class="verticalpage2rtist link" aria-label="Nombre del grupo o artista" href="#">RADWIMPS</a>
+                      </div>
+                    </div>
+                    <a class="verticalpage2lbum link is-page4" aria-label="Nombre del álbum" href="#">Gurenge</a>
+                    <p class="verticalPlaylist-date is-page4" aria-label="Fecha en la cual se subió la canción">05 de sep. de 2021</p>
+                    <p class="verticalPlaylist-time is-page4" aria-label="Duración de la canción">3:58</p>
+                  </div>
+                </div>
+                <div class="songContainer">
+                  <div class="verticalPlaylist">
+                    <div class="collage">
+                      <img src="./images/anime-hits.png" width="40" height="40" alt="Fotografía de la canción">
+                      <div class="collage-description">
+                        <p class="verticalPlaylist-title u-noMargin" aria-label="Nombre de la canción">Grand Escape</p>
+                        <a class="verticalpage2rtist link" aria-label="Nombre del grupo o artista" href="#">RADWIMPS</a>
+                      </div>
+                    </div>
+                    <a class="verticalpage2lbum link is-page4" aria-label="Nombre del álbum" href="#">Gurenge</a>
+                    <p class="verticalPlaylist-date is-page4" aria-label="Fecha en la cual se subió la canción">05 de sep. de 2021</p>
+                    <p class="verticalPlaylist-time is-page4" aria-label="Duración de la canción">3:58</p>
+                  </div>
+                </div>
+                <div class="songContainer">
+                  <div class="verticalPlaylist">
+                    <div class="collage">
+                      <img src="./images/anime-hits.png" width="40" height="40" alt="Fotografía de la canción">
+                      <div class="collage-description">
+                        <p class="verticalPlaylist-title u-noMargin" aria-label="Nombre de la canción">Grand Escape</p>
+                        <a class="verticalpage2rtist link" aria-label="Nombre del grupo o artista" href="#">RADWIMPS</a>
+                      </div>
+                    </div>
+                    <a class="verticalpage2lbum link is-page4" aria-label="Nombre del álbum" href="#">Gurenge</a>
+                    <p class="verticalPlaylist-date is-page4" aria-label="Fecha en la cual se subió la canción">05 de sep. de 2021</p>
+                    <p class="verticalPlaylist-time is-page4" aria-label="Duración de la canción">3:58</p>
+                  </div>
+                </div>
            </div>
           </div>
         </section>
